--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@formatjs/intl-datetimeformat": "^1.2.2",
+    "@formatjs/intl-getcanonicallocales": "^1.2.6",
+    "@formatjs/intl-numberformat": "^4.2.9",
+    "@formatjs/intl-pluralrules": "^2.2.9",
     "react": "16.13.1",
-    "react-native": "0.63.0-rc.1"
+    "react-intl": "^4.7.2",
+    "react-native": "0.63.0-rc.1",
+    "react-native-localize": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/react": "^16.9.41",
+    "@types/react-native": "^0.62.13",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "typescript": "^3.9.5"
   },
   "jest": {
     "preset": "react-native"
